--- a/helium/templates/user-config.css
+++ b/helium/templates/user-config.css
@@ -61,7 +61,7 @@ article th, #yc-dialog th {
     background-color: {{ theme_config.background_color }} !important;
 }
 
-#module_nav a {
+#module_nav h1 {
     color: {{ theme_config.text_color }} !important;
 }
 
